--- a/little-lemon/public/index.html
+++ b/little-lemon/public/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="description" content="A family owned Mediterranean restaurant, focused on traditional recipes served with a modern twist."/>
+    <meta name="og:title" content="Little Lemon"/>
+    <meta name="og:description" content="A family owned Mediterranean restaurant, focused on traditional recipes served with a modern twist."/>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
+    <meta name="og:image" content="Logo.png"/>
       name="description"
       content="Web site created using create-react-app"
     />
@@ -24,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Little Lemon</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
